--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.2
+  flutter_riverpod: ^2.4.9
+  google_fonts: ^6.1.0
+  http: ^1.1.2
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   flutter_test:
